@@ -1,5 +1,5 @@
 CACHE MANIFEST
-# ref 450
+# ref 451
 
 CACHE:
 favicon.ico
@@ -347,6 +347,7 @@ i18n/domoticz-en.json
 i18n/domoticz-es.json
 i18n/domoticz-fr.json
 i18n/domoticz-nl.json
+i18n/domoticz-no.json
 i18n/domoticz-pl.json
 i18n/domoticz-pt.json
 i18n/domoticz-it.json
