@@ -83,19 +83,6 @@
 		<script src="js/export-csv.js"></script>
 		<script type="text/javascript" charset="utf-8" src="js/themes/dark-blue.js"></script>
 		<script type="text/javascript" charset="utf-8" src="js/domoticz.js"></script>
-
-		<link rel="localization" hreflang="bg" href="i18n/domoticz-bg.json" type="application/l10n+json"/>
-		<link rel="localization" hreflang="de" href="i18n/domoticz-de.json" type="application/l10n+json"/>
-		<link rel="localization" hreflang="en" href="i18n/domoticz-en.json" type="application/l10n+json"/>
-		<link rel="localization" hreflang="es" href="i18n/domoticz-es.json" type="application/l10n+json"/>
-		<link rel="localization" hreflang="fr" href="i18n/domoticz-fr.json" type="application/l10n+json"/>
-		<link rel="localization" hreflang="nl" href="i18n/domoticz-nl.json" type="application/l10n+json"/>
-		<link rel="localization" hreflang="pl" href="i18n/domoticz-pl.json" type="application/l10n+json"/>
-		<link rel="localization" hreflang="pt" href="i18n/domoticz-pt.json" type="application/l10n+json"/>
-		<link rel="localization" hreflang="it" href="i18n/domoticz-it.json" type="application/l10n+json"/>
-		<link rel="localization" hreflang="ru" href="i18n/domoticz-ru.json" type="application/l10n+json"/>
-		<link rel="localization" hreflang="sk" href="i18n/domoticz-sk.json" type="application/l10n+json"/>
-		<link rel="localization" hreflang="sv" href="i18n/domoticz-sv.json" type="application/l10n+json"/>
 <script type="text/javascript" charset="utf-8" id="init-code">
 
 function logEvent(event) {
