@@ -252,18 +252,6 @@ fieldset
 	<script src="js/noty/layouts/topRight.js"></script>
 	<script src="js/noty/themes/default.js"></script> 		
 	<script src="js/domoticz.js"></script>
- 
-	<link rel="localization" hreflang="de" href="i18n/domoticz-de.json" type="application/l10n+json"/>
-	<link rel="localization" hreflang="en" href="i18n/domoticz-en.json" type="application/l10n+json"/>
-	<link rel="localization" hreflang="es" href="i18n/domoticz-es.json" type="application/l10n+json"/>
-	<link rel="localization" hreflang="fr" href="i18n/domoticz-fr.json" type="application/l10n+json"/>
-	<link rel="localization" hreflang="nl" href="i18n/domoticz-nl.json" type="application/l10n+json"/>
-	<link rel="localization" hreflang="pl" href="i18n/domoticz-pl.json" type="application/l10n+json"/>
-	<link rel="localization" hreflang="pt" href="i18n/domoticz-pt.json" type="application/l10n+json"/>
-	<link rel="localization" hreflang="it" href="i18n/domoticz-it.json" type="application/l10n+json"/>  
-	<link rel="localization" hreflang="ru" href="i18n/domoticz-ru.json" type="application/l10n+json"/> 
-	<link rel="localization" hreflang="sk" href="i18n/domoticz-sk.json" type="application/l10n+json"/>
-	<link rel="localization" hreflang="sv" href="i18n/domoticz-sv.json" type="application/l10n+json"/> 
 	<script type="text/javascript">
 		function DoLogin()
 		{
