@@ -106,14 +106,6 @@ h1:before
 	<script src="js/jquery.i18n.emitter.js"></script>
 	<script src="js/jquery.i18n.language.js"></script>
 	<script src="js/domoticz.js"></script>
- 
-	<link rel="localization" hreflang="bg" href="i18n/domoticz-bg.json" type="application/l10n+json"/>
-	<link rel="localization" hreflang="de" href="i18n/domoticz-de.json" type="application/l10n+json"/>
-	<link rel="localization" hreflang="en" href="i18n/domoticz-en.json" type="application/l10n+json"/>
-	<link rel="localization" hreflang="es" href="i18n/domoticz-es.json" type="application/l10n+json"/>
-	<link rel="localization" hreflang="fr" href="i18n/domoticz-fr.json" type="application/l10n+json"/>
-	<link rel="localization" hreflang="nl" href="i18n/domoticz-nl.json" type="application/l10n+json"/>
-	<link rel="localization" hreflang="it" href="i18n/domoticz-it.json" type="application/l10n+json"/>  
 	<script type="text/javascript">
 
 function logEvent(event) {
