@@ -24,18 +24,7 @@
 		<script type="text/javascript" charset="utf-8" src="js/domoticz.js"></script>
 		<script src="js/d3.min.js"></script>
 		<script type="text/javascript" charset="utf-8" src="js/jquery.dataTables.min.js"></script>
-		<link rel="localization" hreflang="de" href="i18n/domoticz-de.json" type="application/l10n+json"/>
-		<link rel="localization" hreflang="en" href="i18n/domoticz-en.json" type="application/l10n+json"/>
-		<link rel="localization" hreflang="es" href="i18n/domoticz-es.json" type="application/l10n+json"/>
-		<link rel="localization" hreflang="fr" href="i18n/domoticz-fr.json" type="application/l10n+json"/>
-		<link rel="localization" hreflang="nl" href="i18n/domoticz-nl.json" type="application/l10n+json"/>
-		<link rel="localization" hreflang="pl" href="i18n/domoticz-pl.json" type="application/l10n+json"/>
-		<link rel="localization" hreflang="pt" href="i18n/domoticz-pt.json" type="application/l10n+json"/>
-		<link rel="localization" hreflang="it" href="i18n/domoticz-it.json" type="application/l10n+json"/>
-		<link rel="localization" hreflang="ru" href="i18n/domoticz-ru.json" type="application/l10n+json"/>
-		<link rel="localization" hreflang="sk" href="i18n/domoticz-sk.json" type="application/l10n+json"/>
-		<link rel="localization" hreflang="sv" href="i18n/domoticz-sv.json" type="application/l10n+json"/>
-		
+	
 		<script>
 		
 		function getParameter(paramName) {
@@ -342,6 +331,21 @@
 		}
 		
 		function drawInfo() {
+			$.ajax({
+				 url: "getlanguage.js",
+				 async: false, 
+				 dataType: 'json',
+				 success: function(data) {
+					if (typeof data.language != 'undefined') {
+						SetLanguage(data.language);
+					}
+					else {
+						SetLanguage('en');
+					}
+				 },
+				 error: function(){
+				 }
+			});
 			drawChord();
 			drawGroupTable();
 		}
